--- a/MVC.WebUI/MVC.WebUI.csproj
+++ b/MVC.WebUI/MVC.WebUI.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Helpers\PagingHelpers.cs" />
     <Compile Include="Helpers\XmlHelpers.cs" />
     <Compile Include="Models\ArticleDetailsViewModel.cs" />
+    <Compile Include="Models\ArticleEditViewModel.cs" />
     <Compile Include="Models\HomeIndexViewModel.cs" />
     <Compile Include="Modules\CheckBrowserModule.cs" />
     <Compile Include="Modules\ErrorModule.cs" />
