--- a/MVC.WebUI/Web.Release.config
+++ b/MVC.WebUI/Web.Release.config
@@ -15,7 +15,15 @@
     </connectionStrings>
   -->
   <system.web>
+
+    <authentication mode="Forms">
+      <forms requireSSL="true" xdt:Transform="SetAttributes(requireSSL)" />
+    </authentication>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
+    <!--<compilation debug="false" xdt:Transform="SetAttributes(debug)"  />-->
+    <customErrors mode="On" xdt:Transform="SetAttributes(mode)" />
+    <trace enabled="false" xdt:Transform="Replace" />
+
     <!--
       In the example below, the "Replace" transform will replace the entire 
       <customErrors> section of your web.config file.
