--- a/MVC.WebUI/Web.config
+++ b/MVC.WebUI/Web.config
@@ -189,6 +189,12 @@ URL MAPPING:
     </compilers>
   </system.codedom>
   <entityFramework>
+    <!-- alternative to using Database.SetInitializer(new DatabaseInitializer()) in Global.asax -->
+    <contexts>
+      <context type="MVC.Core.Data.EntityFramework.NotePadDbContext, MVC.Core" disableDatabaseInitialization="true">
+        <databaseInitializer type="MVC.Core.Testing.DatabaseInitializer, MVC.Core"/>
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
