--- a/MVC.WebUI/MVC.WebUI.csproj
+++ b/MVC.WebUI/MVC.WebUI.csproj
@@ -157,9 +157,10 @@
     </Compile>
     <Compile Include="Helpers\PagingHelpers.cs" />
     <Compile Include="Helpers\XmlHelpers.cs" />
-    <Compile Include="Models\ArticleDetailsViewModel.cs" />
-    <Compile Include="Models\ArticleEditViewModel.cs" />
-    <Compile Include="Models\HomeIndexViewModel.cs" />
+    <Compile Include="Models\Articles\ArticleDetailsViewModel.cs" />
+    <Compile Include="Models\Articles\ArticleEditViewModel.cs" />
+    <Compile Include="Models\Articles\ArticleIndexViewModel.cs" />
+    <Compile Include="Models\Home\HomeIndexViewModel.cs" />
     <Compile Include="Modules\CheckBrowserModule.cs" />
     <Compile Include="Modules\ErrorModule.cs" />
     <Compile Include="Modules\SeoRedirectModule.cs" />
@@ -210,13 +211,12 @@
     <Content Include="Content\fonts\sorts-mill-goudy.zip" />
     <Content Include="Content\css\scss\default.scss" />
     <Content Include="Content\css\scss\website\shared\_layout.scss" />
-    <Content Include="Views\Article\Add.cshtml" />
-    <Content Include="Views\Article\Details.cshtml" />
-    <Content Include="Views\Article\Edit.cshtml" />
+    <Content Include="Views\Article\details.cshtml" />
+    <Content Include="Views\Article\edit.cshtml" />
     <Content Include="Views\Article\index-edit.cshtml" />
-    <Content Include="Views\Article\Index.cshtml" />
-    <Content Include="Views\Article\_Breadcrumb.cshtml" />
-    <Content Include="Views\Article\_EditArticleForm.cshtml" />
+    <Content Include="Views\Article\index.cshtml" />
+    <Content Include="Views\Article\create.cshtml" />
+    <Content Include="Views\Article\_edit-form.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
