--- a/MVC.WebUI/Web.config
+++ b/MVC.WebUI/Web.config
@@ -190,7 +190,7 @@ URL MAPPING:
   </system.codedom>
   <entityFramework>
     <!-- alternative to using Database.SetInitializer(new DatabaseInitializer()) in Global.asax -->
-    <contexts>
+    <!--<contexts>
       <context type="MVC.Core.Data.EntityFramework.NotePadDbContext, MVC.Core" disableDatabaseInitialization="true">
         <databaseInitializer type="MVC.Core.Testing.DatabaseInitializer, MVC.Core"/>
       </context>
@@ -202,6 +202,6 @@ URL MAPPING:
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
+    </providers>-->
   </entityFramework>
 </configuration>
