--- a/MVC.Core/MVC.Core.csproj
+++ b/MVC.Core/MVC.Core.csproj
@@ -90,7 +90,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Testing\MockRepository.cs" />
     <Compile Include="Testing\MockUnitOfWork.cs" />
-    <Compile Include="Testing\DatabaseInitialiazer.cs" />
+    <Compile Include="Testing\DatabaseInitializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Data\XML\Countries.xml" />
