--- a/MVC.WebUI/MVC.WebUI.csproj
+++ b/MVC.WebUI/MVC.WebUI.csproj
@@ -148,7 +148,9 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Attributes\GlobalErrorAttribute.cs" />
     <Compile Include="Attributes\ValidateHttpReferrerAttribute.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ArticleController.cs" />
+    <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HelpController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -157,9 +159,15 @@
     </Compile>
     <Compile Include="Helpers\PagingHelpers.cs" />
     <Compile Include="Helpers\XmlHelpers.cs" />
+    <Compile Include="Models\Account\ChangePasswordViewModel.cs" />
+    <Compile Include="Models\Account\LoginViewModel.cs" />
+    <Compile Include="Models\Account\RegisterViewModel.cs" />
+    <Compile Include="Models\Account\RequestPasswordViewModel.cs" />
+    <Compile Include="Models\Account\ResetPasswordViewModel.cs" />
     <Compile Include="Models\Articles\ArticleDetailsViewModel.cs" />
     <Compile Include="Models\Articles\ArticleEditViewModel.cs" />
     <Compile Include="Models\Articles\ArticleIndexViewModel.cs" />
+    <Compile Include="Models\EmailViewModel.cs" />
     <Compile Include="Models\Home\HomeIndexViewModel.cs" />
     <Compile Include="Modules\CheckBrowserModule.cs" />
     <Compile Include="Modules\ErrorModule.cs" />
@@ -217,6 +225,15 @@
     <Content Include="Views\Article\index.cshtml" />
     <Content Include="Views\Article\create.cshtml" />
     <Content Include="Views\Article\_edit-form.cshtml" />
+    <Content Include="Views\Account\change-password.cshtml" />
+    <Content Include="Views\Account\index.cshtml" />
+    <Content Include="Views\Account\login.cshtml" />
+    <Content Include="Views\Account\register.cshtml" />
+    <Content Include="Views\Account\request-password.cshtml" />
+    <Content Include="Views\Account\reset-password.cshtml" />
+    <Content Include="Views\Contact\email-confirm.cshtml" />
+    <Content Include="Views\Contact\email.cshtml" />
+    <Content Include="Views\Contact\index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
