--- a/MVC.WebUI/MVC.WebUI.csproj
+++ b/MVC.WebUI/MVC.WebUI.csproj
@@ -149,12 +149,13 @@
     <Compile Include="Attributes\GlobalErrorAttribute.cs" />
     <Compile Include="Attributes\ValidateHttpReferrerAttribute.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\ArticleController.cs" />
+    <Compile Include="Controllers\ArticlesController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HelpController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -238,6 +239,7 @@
     <Content Include="Views\Contact\email.cshtml" />
     <Content Include="Views\Contact\index.cshtml" />
     <Content Include="Views\Shared\_languages.cshtml" />
+    <Content Include="Views\Products\products.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -249,7 +251,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Content\js\jquery\" />
     <Folder Include="Content\js\modernizr\" />
-    <Folder Include="Views\Product\" />
+    <Folder Include="Models\Products\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MVC.Core\MVC.Core.csproj">
