--- a/MVC.Services/MVC.Services.csproj
+++ b/MVC.Services/MVC.Services.csproj
@@ -90,6 +90,14 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WebMatrix.Data, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.Data.1.0.20105.408\lib\net40\WebMatrix.Data.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="WebMatrix.WebData, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.WebData.3.2.3\lib\net45\WebMatrix.WebData.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account\ChangePasswordStatus.cs" />
@@ -100,9 +108,11 @@
     <Compile Include="Account\ILoginService.cs" />
     <Compile Include="Account\IRolesService.cs" />
     <Compile Include="Account\IUserService.cs" />
+    <Compile Include="Account\SimpleMembershipAdapter.cs" />
     <Compile Include="Account\Transfer\CreateAccountRequest.cs" />
     <Compile Include="Account\Transfer\CreateAccountResponse.cs" />
     <Compile Include="Account\Transfer\LogInRequest.cs" />
+    <Compile Include="Account\Transfer\LogInResponse.cs" />
     <Compile Include="Article\ArticleService.cs" />
     <Compile Include="Article\IArticleService.cs" />
     <Compile Include="Article\Transfer\ArticleDto.cs" />
