--- a/MVC.Services/packages.config
+++ b/MVC.Services/packages.config
@@ -4,6 +4,8 @@
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="1.0.20105.408" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net46" />
