Work on SimpleMemebershipAdapter

--- a/MVC.WebUI.Tests/MVC.WebUI.Tests.csproj
+++ b/MVC.WebUI.Tests/MVC.WebUI.Tests.csproj
@@ -80,6 +80,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Account\AccountControllerTests.cs" />
     <Compile Include="Article\ArticleControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
