--- a/MVC.Core/MVC.Core.csproj
+++ b/MVC.Core/MVC.Core.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Configuration\ConfigSettings.cs" />
     <Compile Include="Configuration\EmailConfig.cs" />
     <Compile Include="Configuration\ISystemSettings.cs" />
+    <Compile Include="Configuration\FormPatterns.cs" />
     <Compile Include="Configuration\RegularExpressions.cs" />
     <Compile Include="Configuration\SystemSettings.cs" />
     <Compile Include="Configuration\WebsiteConfig.cs" />
