--- a/MVC.WebUI/Web.config
+++ b/MVC.WebUI/Web.config
@@ -109,12 +109,21 @@ URL MAPPING:
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="false" />
     <add key="UnobtrusiveJavaScriptEnabled" value="false" />
+    <add key="owin:AutomaticAppStartup" value="false" />
   </appSettings>
   <system.web>
     <authentication mode="Forms">
       <!--timeout & slidingExpiration(?) is only valid for persistent cookies-->
       <forms loginUrl="~/admin/login" name="[USE GUID]" cookieless="UseCookies" requireSSL="false" protection="All" slidingExpiration="false" timeout="30" enableCrossAppRedirects="false" />
     </authentication>
+    
+    <membership defaultProvider="SimpleMembershipProvider">
+      <providers>
+        <clear />
+        <add name="SimpleMembershipProvider" type="WebMatrix.WebData.SimpleMembershipProvider, WebMatrix.WebData" />
+      </providers>
+    </membership>
+    
     <compilation debug="true" targetFramework="4.6" />
     <customErrors mode="RemoteOnly" />
     <!-- see: https://weblog.west-wind.com/posts/2014/Mar/27/Auto-Selecting-Cultures-for-Localization-in-ASPNET -->
@@ -178,7 +187,7 @@ URL MAPPING:
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -187,6 +196,22 @@ URL MAPPING:
       <dependentAssembly>
         <assemblyIdentity name="WebMatrix.Data" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.5.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
