--- a/MVC.WebUI/package.json
+++ b/MVC.WebUI/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "gulp": "3.9.0",
-    "gulp-sass": "2.1.0"
+    "gulp-sass": "2.1.1",
+    "gulp-sourcemaps": "1.6.0"
   }
 }
