--- a/MVC.WebUI/Web.config
+++ b/MVC.WebUI/Web.config
@@ -125,7 +125,11 @@ URL MAPPING:
     </membership>
     
     <compilation debug="true" targetFramework="4.6" />
-    <customErrors mode="RemoteOnly" />
+    <!--http://benfoster.io/blog/aspnet-mvc-custom-error-pages-->
+    <customErrors mode="RemoteOnly" redirectMode="ResponseRewrite" defaultRedirect="~/errors/500.aspx">
+      <error statusCode="404" redirect="~/errors/404.aspx"/>
+      <error statusCode="500" redirect="~/errors/500.aspx"/>
+    </customErrors>
     <!-- see: https://weblog.west-wind.com/posts/2014/Mar/27/Auto-Selecting-Cultures-for-Localization-in-ASPNET -->
     <globalization culture="auto:en-gb" uiCulture="auto:en-gb" />
     <httpCookies httpOnlyCookies="true" />
@@ -149,8 +153,18 @@ URL MAPPING:
       </staticTypes>
     </httpCompression>
     <urlCompression doStaticCompression="true" doDynamicCompression="true" />
+    
     <!-- needed to override the custom error page mapping done by IIS7 itself -->
-    <httpErrors existingResponse="PassThrough" />
+    <!--<httpErrors existingResponse="PassThrough" />-->
+    
+    <!--http://benfoster.io/blog/aspnet-mvc-custom-error-pages-->
+    <httpErrors errorMode="DetailedLocalOnly">
+      <remove statusCode="404" />
+      <error statusCode="404" subStatusCode="13" path="errors\404-13.html" responseMode="File" />
+      <error statusCode="404" path="errors\404.html" responseMode="File" />
+      <remove statusCode="500" />
+      <error statusCode="500" path="errors\500.html" responseMode="File" />
+    </httpErrors>
     <httpProtocol>
       <customHeaders>
         <!-- for Internet Explorer - forces the browser to use standards mode rather than compatibility mode-->
