--- a/MVC.WebUI/MVC.WebUI.csproj
+++ b/MVC.WebUI/MVC.WebUI.csproj
@@ -143,6 +143,7 @@
     <Content Include="Content\js\website\account\website-account-index.js" />
     <Content Include="Content\js\website\account\website-account-login.js" />
     <Content Include="Content\js\website\home\website-home-index.js" />
+    <Content Include="Content\xml\open-search\search.xml" />
     <Content Include="Errors\404-13.html" />
     <Content Include="Errors\404.aspx" />
     <Content Include="Errors\404.html" />
@@ -268,6 +269,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\images\favicons\" />
     <Folder Include="Content\js\jquery\" />
     <Folder Include="Content\js\modernizr\" />
     <Folder Include="Models\Products\" />
